--- a/main.css
+++ b/main.css
@@ -5,3 +5,7 @@
 .btn-effect {
   @apply hover:bg-slate-300 active:bg-slate-300 focus:outline-none focus:ring-1 focus:ring-sky-100 focus:brightness-125 hover:-translate-x-2;
 }
+
+.billionaire-card {
+  @apply bg-[#0E1B34] px-2 pb-4;
+}
